remove the part overlap with Steve's fix

--- a/website/static/css/site.css
+++ b/website/static/css/site.css
@@ -883,7 +883,3 @@ form.form-horizontal.form-horizontal-narrow .control-group {
     width:100%;
     height:500px;
 }
-
-.image-overflow {
-    overflow:auto;
-}
